--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,7 +28,11 @@ Imports:
     coin,
     pamr,
     gtools,
-    AICcmodavg
+    AICcmodavg,
+    survRM2
 Suggests:
-    testthat
+    testthat,
+    knitr,
+    rmarkdown
 RoxygenNote: 6.1.1
+VignetteBuilder: knitr
