minor bug fixes, modifications for preliminary implementations of binary and continuous trait

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(run5STAR)
 export(tree_control)
 import(forestplot)
 import(grid)
+import(partykit)
 import(survival)
 importFrom(checkmate,assert)
 importFrom(checkmate,assert_class)
